--- a/resources/styles/main.scss
+++ b/resources/styles/main.scss
@@ -1,4 +1,7 @@
-@import "base.scss";
+@import "null.scss";
+@import "../layouts/base.scss";
+@import "../components/header/header.scss";
+@import "../components/footer/footer.scss";
 
 $primary: red;
 $secondary: blue;
@@ -7,11 +10,3 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
-.hello {
-    color: $primary;
-    font-family: 'Monserrat', sans-serif;
-}
-
-.lorem {
-    color: $secondary;
-}
